--- a/requirements.txt
+++ b/requirements.txt
@@ -1,152 +1,34 @@
-altgraph==0.17.2
-anyio==3.6.2
-apturl==0.5.2
-asgiref==3.5.2
-async-generator==1.10
-attrs==22.1.0
-auto-py-to-exe==2.22.0
-bcrypt==3.2.0
-blinker==1.4
-bottle==0.12.23
-bottle-websocket==0.2.9
-Brlapi==0.8.3
-cachetools==5.0.0
-certifi==2022.6.15
-chardet==4.0.0
-click==8.0.3
-colorama==0.4.4
-command-not-found==0.3
-cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
-defer==1.0.6
-distlib==0.3.6
-distro==1.7.0
-distro-info===1.1build1
-Django==4.1
-djangorestframework==3.13.1
-dnspython==2.1.0
-drf-extra-fields==3.4.0
-duplicity==0.8.21
-Eel==0.14.0
-et-xmlfile==1.1.0
-fastapi==0.86.0
+nyio==3.6.2
+bcrypt==4.0.1
+certifi==2022.9.24
+click==8.1.3
+dnspython==2.2.1
+email-validator==1.3.0
+fastapi==0.87.0
 fastapi-login==1.8.3
-fasteners==0.14.1
-filelock==3.8.0
-future==0.18.2
-gevent==21.12.0
-gevent-websocket==0.10.1
-google-api-python-client==1.7.11
-google-auth==1.5.1
-google-auth-httplib2==0.1.0
-greenlet==1.1.2
-gunicorn==20.1.0
-h11==0.13.0
-httplib2==0.20.2
-idna==3.3
-importlib-metadata==4.6.4
-jeepney==0.7.1
+h11==0.14.0
+httpcore==0.16.1
+httptools==0.5.0
+httpx==0.23.1
+idna==3.4
+itsdangerous==2.1.2
 Jinja2==3.1.2
-keyring==23.5.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lockfile==0.12.2
-louis==3.20.0
-macaroonbakery==1.3.1
-Mako==1.1.3
-MarkupSafe==2.0.1
-monotonic==1.6
-more-itertools==8.10.0
-MouseInfo==0.1.3
-netifaces==0.11.0
-numpy==1.23.4
-oauth2client==4.1.3
-oauthlib==3.2.0
-olefile==0.46
-opencv-contrib-python==4.6.0.66
-opencv-python==4.6.0.66
-openpyxl==3.0.10
-outcome==1.2.0
-paramiko==2.9.3
+MarkupSafe==2.1.1
+orjson==3.8.2
 passlib==1.7.4
 path==16.5.0
-pexpect==4.8.0
-Pillow==9.0.1
-platformdirs==2.5.2
-protobuf==3.12.4
-psycopg2==2.9.3
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-PyAutoGUI==0.9.53
-pycairo==1.20.1
-pycups==2.0.1
 pydantic==1.10.2
-PyDrive==1.3.1
-PyGetWindow==0.0.9
-PyGObject==3.42.1
-pyinstaller==5.3
-pyinstaller-hooks-contrib==2022.10
 PyJWT==2.6.0
-pymacaroons==0.13.0
-PyMsgBox==1.0.9
-PyNaCl==1.5.0
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyperclip==1.8.2
-PyQt5==5.15.7
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.0
-PyRect==0.2.0
-pyRFC3339==1.1
-PyScreeze==0.1.28
-PySocks==1.7.1
-python-apt==2.3.0+ubuntu2.1
-python-dateutil==2.8.1
-python-debian===0.1.43ubuntu1
-python-dotenv==0.20.0
+python-dotenv==0.21.0
 python-multipart==0.0.5
-python3-xlib==0.15
-pytweening==1.0.4
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
-reportlab==3.6.8
-requests==2.25.1
-requests-toolbelt==0.9.1
-rsa==4.8
-SecretStorage==3.3.1
-selenium==4.4.3
+PyYAML==6.0
+rfc3986==1.5.0
 six==1.16.0
-sniffio==1.2.0
-sortedcontainers==2.4.0
-SQLAlchemy==1.4.31
-sqlparse==0.4.2
-starlette==0.20.4
-subprocess.run==0.0.8
-systemd-python==234
-tqdm==4.64.0
-trio==0.21.0
-trio-websocket==0.9.2
+sniffio==1.3.0
+starlette==0.21.0
 typing_extensions==4.4.0
-ubuntu-advantage-tools==27.11.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-uritemplate==3.0.1
-urllib3==1.26.5
-usb-creator==0.3.7
-uvicorn==0.19.0
-virtualenv==20.16.6
-wadllib==1.3.6
-webdriver-manager==3.8.3
-whichcraft==0.6.1
-wsproto==1.2.0
-xdg==5
-xkit==0.0.0
-zipp==1.0.0
-zope.event==4.5.0
-zope.interface==5.4.0
+ujson==5.5.0
+uvicorn==0.20.0
+uvloop==0.17.0
+watchfiles==0.18.1
+websockets==10.4
